# tradingview_notify

./: .gitignore  app.py  pyproject.toml  server.py
